# of-apps

./: .gitignore  .gitignore.save  README.md  calib-cams.sh  calib-kinect-ps3  calib-kinect-rgb  calib-kinect-rgb-mono  calib-kinect-rgb-stereo  calib-kinect-rgb-stereo-test  calib-kinect-rgb-test  calib-kinect-rgb.sh  calib-kinect.sh  calib-proj.sh  calib.txt  config.json  ctrl.app  ctrl_calibrate_kinect_projector.touchosc  dev.sh  export_projs.sh  extract_projs.sh  install_addons.sh  settings.json  todo.txt
app/: addons.make  ecs.js  package.json  readme
app/plab2.xcodeproj/: project.pbxproj
app/plab_app.xcodeproj/: project.pbxproj
app/src/: keys.h  main.cpp  ofApp.cpp  ofApp.h
b/components/: ArucoComponent.h  BloqEventsComponent.h  ConfigComponent.h  DepthComponent.h  FisicaComponent.h  FlowFieldComponent.h  FlowfieldDebugComponent.h  ParticleEmitterComponent.h  RgbComponent.h  TimeBenderComponent.h
b/systems/: ArucoSystem.h  BlobsSystem.h  DepthFlowFieldSystem.h  DepthSegmentationSystem.h  DepthSmoothingSystem.h  FlowfieldDebugSystem.h  KnobSystem.h  ParticleBlobsContainersSystem.h  ParticleDepthSlopeFlowSystem.h  ParticleFlowFieldSystem.h  TimeBenderSystem.h
calib_rgb/: addons.make
calib_rgb/calib_rgb.xcodeproj/: project.pbxproj
calib_rgb/src/: main.cpp  ofApp.cpp  ofApp.h
calib_rgb_test/: addons.make
calib_rgb_test/calib_rgb_test.xcodeproj/: project.pbxproj
calib_rgb_test/src/: ofApp.cpp  ofApp.h
calibrate_kinect/: addons.make
calibrate_kinect/calibrate_kinect.xcodeproj/: project.pbxproj
calibrate_kinect/src/: ofApp.cpp  ofApp.h
calibrate_kinect_projector/: addons.make
calibrate_kinect_projector/calibrate_kinect_projector.xcodeproj/: project.pbxproj
calibrate_kinect_projector/src/: main.cpp  ofApp.cpp  ofApp.h
calibrate_kinect_projector_chessboard/: addons.make
calibrate_kinect_projector_chessboard/calibrate_kinect_projector_chessboard.xcodeproj/: project.pbxproj
calibrate_kinect_projector_chessboard/src/: main.cpp  ofApp.cpp  ofApp.h
calibrate_kinect_projector_ofxreprojection/src/: main.cpp  ofApp.cpp  ofApp.h
calibrate_kinect_ps3eye/: addons.make
calibrate_kinect_ps3eye/calibrate_kinect_ps3eye.xcodeproj/: project.pbxproj
calibrate_kinect_ps3eye/src/: ofApp.cpp  ofApp.h
calibrate_kinect_ps3eye_test/: addons.make
calibrate_kinect_ps3eye_test/calib_rgb_test.xcodeproj/: project.pbxproj
calibrate_kinect_ps3eye_test/src/: ofApp.cpp  ofApp.h
calibrate_kinect_rgb/: addons.make
calibrate_kinect_rgb/src/: main.cpp  ofApp.cpp  ofApp.h
calibrate_kinect_rgb_mono/: addons.make
calibrate_kinect_rgb_mono/src/: ofApp.cpp  ofApp.h
calibrate_kinect_rgb_stereo/: addons.make
calibrate_kinect_rgb_stereo/src/: main.cpp  ofApp.cpp  ofApp.h
calibrate_kinect_rgb_stereo_test/: addons.make
calibrate_kinect_rgb_stereo_test/src/: main.cpp  ofApp.cpp  ofApp.h
chilitags/: .gitignore  CMakeLists.txt  DEPRECATED  makerun.sh  run.sh
chilitags/app/: CMakeLists.txt  detect_from_file.cpp  plab_chilitags.cpp
config/: game.json  motor.json
ctrl/: addons.make
ctrl/ctrl.xcodeproj/: project.pbxproj
ctrl/plab2_ctrl.xcodeproj/: project.pbxproj
ctrl/plab_ctrl.xcodeproj/: project.pbxproj
ctrl/src/: main.cpp  ofApp.cpp  ofApp.h
data/: ofxTimeMeasurements.settings
data/calib/: calib_RT_kinect_to_ps3eye.yml  calib_RT_proj_lg_to_kinect_rgb.yml  calib_RT_ps3eye_to_kinect.yml  calib_kinect.aruco.yml  calib_kinect.ofxcv.yml  calib_proj_lg.ofxcv.yml  calib_ps3eye.aruco.yml  calib_ps3eye.ofxcv.yml  cam_pattern.yml  cml_tweak.yml  extrinsics_kinect_to_logitech920.yml  extrinsics_kinect_to_logitech920__1.4x__.yml  extrinsics_kinect_to_ps3eye.yml  extrinsics_logitech920_to_kinect.yml  extrinsics_logitech920_to_kinect__1.4x__.yml  extrinsics_proj_aaxa_to_kinect_rgb.yml  extrinsics_ps3eye_to_kinect.yml  (+19 more)
ecs_bloqs_1/: addons.make
plab1/: addons.make
plab2/: addons.make  ecs.js  make.js  readme
plab2_ctrl/: addons.make
plab2_ecs_bloqs/: addons.make  make.js  package.json
plane_detector/: addons.make
plane_detector_osc/: Project.xcconfig  addons.make
(+351 files in other folders)
